src/style.css
:root {
  --heading-font-family: "Inter", sans-serif;
  --deafault-font-family: "Poppins", sans-serif;
}

.container {
  max-width: 1400px;
  margin: 0 auto;
}

.grid {
  display: grid;
  grid-template-columns: 1fr 2fr 2fr;
}

section {
  max-width: 1200px;
  margin: 0 auto;
}

body {
  background-color: black;
  font-family: var(--deafault-font-family);
  margin: 0 auto;
}

header {
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
    url("/src/images/background.png");
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
  text-align: center;
  padding: 200px 0;
}

header h1 {
  font-family: "Inter", sans-serif;
  font-weight: 700;
  font-size: 96px;
  line-height: 1.5;
  margin: 0;
}

header h2 {
  font-weight: 400;
  font-size: 40px;
  line-height: 1.5;
  margin: 0;
}

header h3 {
  font-weight: 900;
  font-size: 24px;
  line-height: 1.5;
  letter-spacing: 5px;
  margin: 0;
  padding-bottom: 25px;
}

header hr {
  border-top: 2px solid white;
  margin: 10px auto 0;
}

header a {
  display: inline-block;
  background-color: white;
  color: #272044;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.5;
  letter-spacing: 3px;
  margin-top: 32px;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  padding: 16px 32px;
}

footer {
  background-image:
    linear-gradient(rgba(39, 32, 68, 0.9), rgba(39, 32, 68, 0.9)),
    url("/src/images/spiritedaway.png");
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
  padding: 90px 0;
}

footer h4 {
  font-weight: 700;
  font-size: 20px;
  line-height: 1.5;
}

footer p {
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  margin-right: 25px;
  opacity: 0.6;
}

footer ul,
footer li {
  padding: 0;
}

footer li {
  list-style: none;
  margin: 0;
}

footer a {
  color: white;
  opacity: 0.7;
}

footer a:hover {
  text-decoration: none;
}

@media (max-width: 960px) {
  header {
    padding: 60px 0;
  }

  header h1 {
    font-size: 48px;
    line-height: 1;
    margin: 30px 0;
  }

  header h2 {
    font-size: 20px;
  }

  header h3 {
    font-size: 12px;
  }

  header hr {
    border-top: 1px solid white;
    margin: 15px auto 0;
  }
}

